# superagent

./: .dockerignore  .env.example  .gitignore  COLLABORATION.md  DEPLOYMENT.md  Dockerfile  FIXES_APPLIED.md  PHASE_1_COMPLETE.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
docs/: API.md  agentic_gm_plan.md  news_moat_plan.md  value_model_plan.md
scripts/: demo_superagent.py  healthcheck.sh  smoke_agent.py  validate_data.py
src/superagent/: __init__.py  agent.py  answer_guard.py  api.py  auth.py  canonical_resolution.py  cli.py  config.py  database.py  db.py  db_query.py  draft_tools.py  draft_value.py  espn_integration.py  main.py  models.py  name_resolution.py  official_bye_weeks.py  rate_limit.py  tool_schemas.py  tools.py  trade_context.py  trade_finder.py  week_utils.py
src/superagent/data/: __init__.py  fetch_nflverse.py  ingest_draft_sheets.py  ingest_sleeper_adp.py  probe_sportsdataio.py  refresh_sleeper_context.py  seed_canonical_players.py  (+1 more)
tests/: __init__.py  test_advanced.py  test_agent.py  test_answer_guard.py  test_api.py  test_auth.py  test_canonical_resolution.py  test_cli.py  test_draft_decision_tools.py  test_draft_ingestion.py  test_draft_research.py  test_espn_integration.py  test_fantasy.py  test_fantasy_schedule_context.py  test_league_settings.py  test_persistence.py  test_schedule_context.py  test_sleeper_adp_ingestion.py  test_sleeper_context.py  test_sportsdataio_client.py  test_tools.py  test_trade_context.py  test_trade_finder.py  test_week_utils.py
(+2 files in other folders)
