[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superagent"
version = "0.1.0"
description = "Superagent: A sellable NFL intelligence agent powered by historical data and Claude API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rob Capozzi", email = "rgcapozzi@gmail.com"}
]

dependencies = [
    "anthropic>=0.34.0",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rapidfuzz>=3.6.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
superagent = "superagent.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superagent = ["py.typed"]
